<resources>
    <string name="app_name">DANAS</string>
    <string name="illustration">Illustration</string>
    <string name="title_home">Home</string>
    <string name="title_school">School</string>
    <string name="title_work">Work</string>
    <string name="title_profile">Profile</string>
    <string name="btn_add">Add Folder</string>
    <string name="txt_for_school">For School</string>
    <string name="img_for_school">School Watermark Icon</string>
    <string name="txt_add_a_folder_school">Add a Folder</string>
    <string name="txt_add_a_folder_school_submit">Add Folder</string>
    <string name="txt_add_a_folder_school_cancel">Cancel</string>
    <string name="img_for_work">Work Watermark Icon</string>
    <string name="txt_for_work">For Work</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="studentID">Student ID</string>
    <string name="University"> University </string>
    <string name="Year">Year Level</string>
    <string name="Program">Program</string>
    <string name="Position">Position</string>
    <string name="Company">Company Name</string>
    <string name="numJobs">Number of Jobs</string>
    <string name="student_name">%1$s %2$s</string> <!-- Format for student full name -->
    <string name="student_info">%1$s Year %2$s Student</string> <!-- Format for year level and program -->
    <string name="employee_role">%1$s</string> <!-- Format for employee role -->

    <string name="nameFirst">Vince Gabrielle</string>
    <string name="nameLast">Lita</string>
</resources>