<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFolderSchool">

    <TextView
        android:id="@+id/txt_add_folder_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="670dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school"
        android:textColor="@color/primary"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt_folder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="227dp"
        android:layout_marginTop="30dp"
        android:text="Folder Name"
        android:fontFamily="@font/montserrat_black"
        android:textColor="@color/primary"
        android:textSize="10sp"
        android:labelFor="@id/edit_folder_name"
        app:layout_constraintBottom_toTopOf="@+id/edit_folder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_school" />

    <TextView
        android:id="@+id/prompt_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="266dp"
        android:fontFamily="@font/montserrat_black"
        android:text="Color"
        android:textColor="@color/primary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_folder_name" />

    <EditText
        android:id="@+id/edit_folder_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/semi_round_button"
        android:inputType="text"
        android:fontFamily="@font/montserrat_black"
        android:textSize="12sp"
        android:textColor="#36454F"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_school" />

    <Button
        android:id="@+id/btn_submit_folder"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school_submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_school" />

    <Button
        android:id="@+id/btn_cancel_submit_folder"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school_cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_folder" />

</androidx.constraintlayout.widget.ConstraintLayout>