<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFolderWork">

    <TextView
        android:id="@+id/txt_add_folder_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="670dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school"
        android:textColor="@color/primary"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt_folder_name_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="227dp"
        android:layout_marginTop="30dp"
        android:text="Folder Name"
        android:fontFamily="@font/montserrat_black"
        android:textColor="@color/primary"
        android:textSize="10sp"
        android:labelFor="@id/edit_folder_name_work"
        app:layout_constraintBottom_toTopOf="@+id/edit_folder_name_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_work"
        tools:ignore="HardcodedText,RtlHardcoded,SmallSp" />

    <TextView
        android:id="@+id/prompt_color_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="266dp"
        android:fontFamily="@font/montserrat_black"
        android:text="Color"
        android:textColor="@color/primary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_folder_name_work"
        tools:ignore="HardcodedText,SmallSp" />

    <LinearLayout
        android:id="@+id/color_palette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/prompt_color_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/color_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Red"
            android:tag="#ffadad"
            android:backgroundTint="#ffadad" />

        <ImageView
            android:id="@+id/color_orange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Orange"
            android:tag="#ffd6a5"
            android:backgroundTint="#ffd6a5" />

        <ImageView
            android:id="@+id/color_yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Yellow"
            android:tag="#fdffb6"
            android:backgroundTint="#fdffb6" />

        <ImageView
            android:id="@+id/color_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Green"
            android:tag="#caffbf"
            android:backgroundTint="#caffbf" />

        <ImageView
            android:id="@+id/color_blue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Blue"
            android:tag="#a0c4ff"
            android:backgroundTint="#a0c4ff" />

        <ImageView
            android:id="@+id/color_purple"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/color_circle"
            android:contentDescription="Purple"
            android:tag="#bdb2ff"
            android:backgroundTint="#bdb2ff" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_folder_name_work"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/semi_round_button"
        android:inputType="text"
        android:fontFamily="@font/montserrat_black"
        android:textSize="12sp"
        android:textColor="#36454F"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit_folder_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_work"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_submit_folder_work"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school_submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_folder_work" />

    <Button
        android:id="@+id/btn_cancel_submit_folder_work"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/txt_add_a_folder_school_cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_folder_work" />



</androidx.constraintlayout.widget.ConstraintLayout>